[package]
name = "ruipmi"
version = "0.1.0"
authors = ["Eric Chen <610521240@gms.ndhu.edu.tw>"]
edition = "2024"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ruipmi"
repository = "https://github.com/dalof41014/ruipmi"

[dependencies]
tokio = { version = "1", features = ["net", "time", "macros", "rt-multi-thread"] }
rand = "0.8"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
bytes = "1"
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"